--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
@@ -17,7 +18,6 @@
 
 # misc
 .DS_Store
-.idea
 *.pem
 
 # debug
@@ -26,7 +26,6 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env
 .env*.local
 
 # vercel
@@ -35,15 +34,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# eslint cache
-.eslintcache
-
-# next-sitemap
-robots.txt
-sitemap.xml
-sitemap-*.xml
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
