--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-.yarn/install-state.gz
 
 # testing
 /coverage
@@ -18,6 +17,7 @@
 
 # misc
 .DS_Store
+.idea
 *.pem
 
 # debug
@@ -26,6 +26,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env*.local
 
 # vercel
@@ -34,3 +35,16 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# eslint cache
+.eslintcache
+
+# next-sitemap
+robots.txt
+sitemap.xml
+sitemap-*.xml
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+node_modules/
